# 2024-Gadgets-Code

./: Cargo.toml  README.md
Mathematica/: mult2.nb
Mathematica/Libraries/: q97_p389.wl
src/: halo2_lookup.rs  lib.rs  lookup_args.rs  mult_check.rs  permutation_check.rs  prescribed_perm_check.rs  prod_check.rs  range.rs  utils.rs
