[package]
name = "gadgets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-poly-commit = "0.4.0"
ark-std = {version = "0.4.0", features = ["getrandom"]}
num-bigint = "0.4.5"
sha2 = "0.10.8"
